fix shifting line item characters

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -77,10 +77,6 @@
 		[ng-click*='increment'] {
 			display: block;
 		}
-
-		&:before {
-			display: none !important;
-		}
 	}
 }
 
